# todo

./: .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: ci_cd.yml
src/: filter_parser.rs  main.rs
