[package]
name = "todo"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.28", features = ["derive"] }
csv = "1.3.1"
strsim = "0.11.1"
serde = { version = "1.0.217", features = ["derive"] }
chrono = { version = "0.4.40", features = ["serde"] }
log = { version = "0.4.26", features = ["kv"] }
env_logger = "0.11.6"
